--- a/Эрзянь_кулялопань_ды_журналонь_лув.mw
+++ b/Эрзянь_кулялопань_ды_журналонь_лув.mw
@@ -15,6 +15,7 @@
 * [[«Вейсэнь эрямо» (кулялопа)]] (Арзамас)
 * [[«Вейсэнь эрямо» (кулялопа)]] (Лугоян ош)
 * [[«Комсомолонь вайгель» (кулялопа)]]
+* [[«Ленинэнь кадрань кис» (кулялопа)]]
 * [[«Ленинэнь киява» (кулялопа)]] (Саран ош)
 * [[«Ленинэнь киява» (кулялопа)]] (Клявлянь буе Самарань ёнкссо)
 * [[«Ленинэнь киява» (кулялопа)]] (Средне-Волжский комсомолец Мордовиясо 12.3.1934)
