--- a/Арси_машинась.mw
+++ b/Арси_машинась.mw
@@ -1,4 +1,4 @@
-[[Артовкс:Computer-aj aj ashton 01.svg|thumb|Арси машинась]]
+[[Артовкс:Desktop computer clipart - Yellow theme.svg|thumb|Арси машинась]]
 '''Арси машина,''' '''''арсемапель''''' - электрононь машинась важодема содамо чить марто ды сынст ванстома туртов. Ловомань лездамо марто сон машты тееме эрьва кодат операцият.
 
 [[Категория:Арси машинась| ]]
