*Empty MediaWiki Message*

--- a/Ховань_(Кадонь_буе).mw
+++ b/Ховань_(Кадонь_буе).mw
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 
-'''Ховань''' ({{lang-ru|п. Ховань}})  — рузонь<http://mnogolik-mordovia.mrsu.ru/k_Hovan.htm Многоликая Мордовия: Посёлок Ховань] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
+'''Ховань''' ({{lang-ru|п. Ховань}})  — рузонь<ref> [http://mnogolik-mordovia.mrsu.ru/k_Hovan.htm Многоликая Мордовия: Посёлок Ховань] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
 
 == Веленть лемденть  ==
 
