*Empty MediaWiki Message*

--- a/Инсар_(Кадонь_буе).mw
+++ b/Инсар_(Кадонь_буе).mw
@@ -53,7 +53,7 @@
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = ОКАТО
- |цифровой идентификатор  = {{ОКАТО|}}
+ |цифровой идентификатор  = {{ОКАТО|89228840005}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
