--- a/Инсар_(Кадонь_буе).mw
+++ b/Инсар_(Кадонь_буе).mw
@@ -1,7 +1,7 @@
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              = Ушлейка
- |оригинальное название   = {{Lang-ru|п. Ушлейка}}
+ |Эрзянь лем              = Инсар
+ |оригинальное название   = {{Lang-ru|п. Инсар}}
  |изображение             = 
  |подчинение              = 
  |мастор                  = Россия
@@ -11,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = 54.065482|lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = 44.29281|lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.065134|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 44.293692|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
