*Empty MediaWiki Message*

--- a/Аморда_лей.mw
+++ b/Аморда_лей.mw
@@ -20,7 +20,7 @@
  |Мастор                  = Россия
   |Ёнкст                  = Мордовия Республикась
    |Буе                   = Лямбирьбуе/Рамаданбуе
- |Позиционная карта = Мордовия Республикась
+ |Позиционная карта = 
 }}
 '''Аморда лей''' ({{lang-ru|Аморда}}) — леесь [[Россия]]со, [[Инсар лей|Инсар леенть]] вить ёнонь сянглей. Чуди  [[Мордовия]]ва [[Лямбирьбуе]]нь ды [[Рамаданбуе]]ва.
 
