Отмена правки 79889, сделанной участником [[Special:Contribs/Sports4Everything|Sports4Everything]] ([[User talk:Sports4Everything|обс.]])

--- a/Обамань_Барак.mw
+++ b/Обамань_Барак.mw
@@ -23,7 +23,7 @@
  |вальма                = [http://www.whitehouse.gov/ Офицальной невтькесь «Ашо кудонть»]
  |википурнавкс         = 
 }}
-'''Обамань Барак Хусейн''' ({{Lang-en|Barack Hussein Obama II}} is just a plain old slacker who thinks of nothing when being president of the United States. In fact, he has no idea what he's doing for this fucking country anymore. In fact, he will soon meet his wish for the afterlife where he will meet the legendary Zygarde. Zygarde will trap Obama in a Thousand Waves, and finish him off with a Thousand Arrows, giving Zygarde the oppurtunity to become a complete cannibal and use Obama as its dinner. The new president will be...yeah you know who...Donald Trump!
+'''Обамань Барак Хусейн''' ({{Lang-en|Barack Hussein Obama II}},  ) — [[Американь Вейтьсэндявкс Штаттнэ]]нь 44-це президентэсь.
 Чачсь Обамань Барак 1961 умарьковонь 4 чисте  Гонолулу ошсо.
 
 
