/* Кадонь буень велетьМноголикая Мордовия:Список населенных пунктов Кадошкинского района{{ref-ru}} */

--- a/Кадоньбуе.mw
+++ b/Кадоньбуе.mw
@@ -84,11 +84,11 @@
 *[[Новая жизнь (Кадонь буе)|Новая жизнь]]
 *[[Новые Авгуры (Кадонь буе)|Новые Авгуры]]
 *[[Парцы (Кадонь буе)|Парцы]]
-*[[Потижская Слобода (Кадонь буе)|Потижская Слобода]]
+*[[Потижской Слобода (Кадонь буе)|Потижская Слобода]]
 *[[Приволье (Кадонь буе)|Приволье]]
 *[[Пушкино (Кадонь буе)|Пушкино]]
 *[[Сиалеевский Майдан (Кадонь буе)|Сиалеевский Майдан]]
-*[[Студеный Ключ (Кадонь буе)|Студеный Ключ]]
+*[[Студеной Ключ (Кадонь буе)|Студеной Ключ]]
 *[[Ушлейка (Кадонь буе)|Ушлейка]]
 *[[Ховань (Кадонь буе)|Ховань]]
 
