*Empty MediaWiki Message*

--- a/Выборг_ош.mw
+++ b/Выборг_ош.mw
@@ -61,4 +61,4 @@
 |add1 = [[Умарьковонь 19 чи]]
 }}
 
-Выборг ош ({{Lang-fi|''Viipuri''}}, {{Lang-sv|''Viborg''}}, {{Lang-de|''Wiborg''}}) - [[Ленинградонь ёнкс]]сэ ош.
+Выборг ош ({{Lang-fi|''Viipuri''}}, {{Lang-sv|''Viborg''}}, {{Lang-de|''Wiborg''}}) - [[Ленинградонь ёнкс]]со ош.
