*Empty MediaWiki Message*

--- a/Валга_ош.mw
+++ b/Валга_ош.mw
@@ -3,7 +3,7 @@
  |статус                  = Ош
  |Эрзянь лем              = Валга ош
  |оригинальное название   = ({{lang-et|Viljandi}}
- |изображение             =  ValgaTownHall.jpg
+ |изображение             =  Valga_collage.jpg
  |подчинение              = 
  |мастор                  = Эстэнь Мастор
  |герб                    =Valga coat of arms.svg
