*Empty MediaWiki Message*

--- a/Валга_ош.mw
+++ b/Валга_ош.mw
@@ -2,7 +2,7 @@
 {{ЭТ
  |статус                  = Ош
  |Эрзянь лем              = Валга ош
- |оригинальное название   = ({{lang-et|Viljandi}}
+ |оригинальное название   = ({{lang-et|Valga}}
  |изображение             =  Valga_collage.jpg
  |подчинение              = 
  |мастор                  = Эстэнь Мастор
