--- a/Польша_Мастор.mw
+++ b/Польша_Мастор.mw
@@ -16,7 +16,7 @@
  |Сехте покш ош= [[Варшава ош|Варшава ош]], [[Лодзь ош|Лодзь ош]], [[Краков ош|Краков ош]], [[Вроцлав ош|Вроцлав ош]], [[Познань ош|Познань ош]], [[Гданьск ош|Гданьск ош]], [[Щецин ош|Щецин ош]], [[Быдгощ ош|Быдгощ ош]], [[Люблин ош|Люблин ош]], [[Катовице ош|Катовице ош]]
  |Правлениянь хвормась=[[Парламентской республикась]]
  |Прявттнэнь таркаст= [[Польша Масторонь Президент|Президент]]<br />[[Польша Масторонь премьер-министра|Премьер-министра]]<br />[[Польша Масторонь сеймань маршал|сеймань маршал]]<br />[[Польша Масторонь сенатонь маршал|Сенатонь маршал]]
- |Прявттнэ=[[Анджей Дуда]]<br />[[Эва Копач]]<br />[[Малгожата Кидава-Блонская]]<br />[[Богдан Борусевич]]
+ |Прявттнэ=[[Анджей Дуда]]<br />[[Беата Шидло]]<br />[[Марек Кухчиньский]]<br />[[Станислав Карчевский]]
  |Таркась модаванть= 70
  |Покшолмазо= 312 679
  |Веденть процентэсь=3,07
