*Empty MediaWiki Message*

--- a/ЛопаПарцун:Россия_Масторонть_масторпелькстнэ.mw
+++ b/ЛопаПарцун:Россия_Масторонть_масторпелькстнэ.mw
@@ -15,7 +15,7 @@
 |вверху       = 
 
 |заголовок1   = [[Россия Масторонть Республикатнэ|Республикат]]
-|список1      =[[Адыгея Республикась|Адыгея]] &#124; [[Алтай Республикась|Алтай]] &#124; [[Башкирия Республикась|Башкирия]] &#124; [[Бурятия Республикась|Бурятия]] &#124; [[Ветькень Республикась|Ветькень]] &#124; [[Дагестан Республикась|Дагестан]] &#124; [[Ингушетия Республикась|Ингушетия]] &#124; [[Кабардинэнь-Балкария Республикась|Кабардинэнь-Балкария]] &#124; [[Калмыкия Республикась|Калмыкия]] &#124; {{nowrap| [[Карачаевань-Черкесия Республикась|Карачаевань-Черкесия]]}} &#124; [[Карелэнь Республикась|Карелия]] &#124; [[Коми Республикась|Коми]] &#124; [[Крым Республикась|Крым]] <ref name="Crym">Крым пельусиянть седе покш пельксэнть кувалма ней ули пелькстамо Россия Масторонть ютксо, коната кирди эсь кедьвийсэнзэ ало те пельусиянть, ды [[Украина]] Мастортнэнь ютксо. Россия Масторонть админэнь ды модань явтовксонть коряс, Крымень пельусиянь пелькстамосо аштиця модатнень лангсо аштить РФ-нь масторпелькстнэ - Крым Раськемасторось ды Севастополь масторонь тешксчисэ аштиця ошось. Украина Масторонь админэнь ды модань явтовксонть коряс пелькстамонь модатнень лангсо аштить [[Украина]] Масторсо аштиця Крым Башка Раськемасторось ды башка аштемасэрьсэ аштиця Севастополь ошось</ref>&#124; {{nowrap| [[Маринь Республикась|Маринь]]}} &#124; [[Мордовия Республикась|Мордовия]] &#124; {{nowrap| [[Якутия Республикась|Якутия]]}} &#124; {{nowrap| [[Пелевёнксонь Осетия Республикась|Пелевеёнксонь Осетия]]}} &#124; [[Печкасонь Республикась|Печкасонь]] &#124; [[Тува Республикась|Тува]] &#124; [[Удмуртонь Республикась|Удмуртия]] &#124; [[Хакасия Республикась|Хакасия]] &#124; [[Чеченэнь Республикась|Чеченэнь]] 
+|список1      =[[Адыгея Республикась|Адыгея]] &#124; [[Алтай Республикась|Алтай]] &#124; [[Башкирия Республикась|Башкирия]] &#124; [[Бурятия Республикась|Бурятия]] &#124; [[Ветькень Республикась|Ветькень]] &#124; [[Дагестан Республикась|Дагестан]] &#124; [[Ингушетия Республикась|Ингушетия]] &#124; [[Кабардинэнь-Балкария Республикась|Кабардинэнь-Балкария]] &#124; [[Калмыкия Республикась|Калмыкия]] &#124; {{nowrap| [[Карачаевань-Черкесия Республикась|Карачаевань-Черкесия]]}} &#124; [[Карелэнь Республикась|Карелия]] &#124; [[Коми Республикась|Коми]] &#124; [[Крым Республикась|Крым]] <ref name="Crym">Крым модаулонть седе покш пельксэнть кувалма ней ули пелькстамо Россия Масторонть ютксо, коната кирди эсь кедьвийсэнзэ ало те пельусиянть, ды [[Украина]] Мастортнэнь ютксо. Россия Масторонть админэнь ды модань явтовксонть коряс, Крымень модаулонь пелькстамосо аштиця модатнень лангсо аштить РФ-нь масторпелькстнэ - Крым Раськемасторось ды Севастополь масторонь тешксчисэ аштиця ошось. Украина Масторонь админэнь ды модань явтовксонть коряс пелькстамонь модатнень лангсо аштить [[Украина]] Масторсо аштиця Крым Башка Раськемасторось ды башка аштемасэрьсэ аштиця Севастополь ошось</ref>&#124; {{nowrap| [[Маринь Республикась|Маринь]]}} &#124; [[Мордовия Республикась|Мордовия]] &#124; {{nowrap| [[Якутия Республикась|Якутия]]}} &#124; {{nowrap| [[Пелевёнксонь Осетия Республикась|Пелевеёнксонь Осетия]]}} &#124; [[Печкасонь Республикась|Печкасонь]] &#124; [[Тува Республикась|Тува]] &#124; [[Удмуртонь Республикась|Удмуртия]] &#124; [[Хакасия Республикась|Хакасия]] &#124; [[Чеченэнь Республикась|Чеченэнь]] 
 
 |заголовок2   = [[Россия Масторонть крайтне|Крайть]]
 |список2      = [[Алтаень край|Алтаень]] &#124; [[Байкалонь томбале край|Байкалонь томбале]] &#124; [[Иневедьвакссонь край|Иневедьвакссонь]] &#124; [[Камчатонь край|Камчатонь]] &#124; [[Краснодаронь край|Краснодаронь]] &#124; [[Красноярскоень край|Красноярскоень]] &#124; [[Пермень край|Пермень]] &#124; [[Ставрополень край|Ставрополень]] &#124; [[Хабаровонь край|Хабаровонь]]
