*Empty MediaWiki Message*

--- a/Польша_Мастор.mw
+++ b/Польша_Мастор.mw
@@ -1,7 +1,4 @@
-{|align="right"
-|-
-|
-{{Мастор
+{{Мастор2
  |Эрзянь лем=Польша Мастор
  |Оригинальное название={{lang-pl|Rzeczpospolita Polska}}
  |Родительный падеж=Польшань
@@ -34,13 +31,11 @@
  |Часовой каркс=+1(тельня);+2(кизна) 
  |Примечания=<references/>
 }}
-|-
-| 
-|}
+
 
 '''По́льша Мастор''' ({{lang-pl|Polska}}), официальнойсте мерить — {{lang-pl|Rzeczpospolita Polska}}) — мастор Куншкань [[Европань Мастор|Европасо]].
 
-Прявтош — [[Варшава ош]]. Масторпрявт келесь — [[Польскоень кель|польской]].
+Прявтош — [[Варшава ош]]. Масторпрявт келесь — [[Поляконь кель|поляконь]].
 
 {{Европань мастортнэ}}
 {{stub}}
