*Empty MediaWiki Message*

--- a/Польша_Мастор.mw
+++ b/Польша_Мастор.mw
@@ -19,7 +19,7 @@
  |Веденть процентэсь=3,07
  |Таркась эрицятнева=34
  |Эрицятне=38 483 957  
- |Ловнома иесь=2014
+ |Раськень сёрмацтомась иесь=2014
  |Ломантнень плотностесь=123
  |ПВП=854,191 млрд.
  |ПВП-нь ловнома иесь=2012
