*Empty MediaWiki Message*

--- a/Польша_Мастор.mw
+++ b/Польша_Мастор.mw
@@ -21,10 +21,10 @@
  |Эрицятне=38 483 957  
  |Раськень сёрмацтомась иесь=2014
  |Ломантнень плотностесь=123
- |ПВП=854,191 млрд.
- |ПВП-нь ловнома иесь=2012
- |Таркась ПВП-нть корява=
- |ПВП эрицянь меленть ланкс=22 162<ref name="imf2" />
+ |МВЭ=854,191 млрд.
+ |МВЭ-нь ловнома иесь=2012
+ |Таркась МВЭ-нть корява=
+ |Вейке эрицяс МВЭ-сь=22 162<ref name="imf2" />
  |Валютась-ярмакось=[[Польской злотый]] (PLN)
  |Доменось=[[.pl]], [[.eu]]
  |Телефонной кодось=48
