*Empty MediaWiki Message*

--- a/Польша_Мастор.mw
+++ b/Польша_Мастор.mw
@@ -24,7 +24,7 @@
  |МВЭ=854,191 млрд.
  |МВЭ-нь ловнома иесь=2012
  |Таркась МВЭ-нть корява=
- |Вейке эрицяс МВЭ-сь=22 162<ref name="imf2" />
+ |Вейке эрицяс МВЭ-сь=22 162
  |Валютась-ярмакось=[[Польской злотый]] (PLN)
  |Доменось=[[.pl]], [[.eu]]
  |Телефонной кодось=48
