--- a/Валга_ош.mw
+++ b/Валга_ош.mw
@@ -1,12 +1,11 @@
-<sup>Кепедень текст</sup>
 {{ЭТ
  |статус                  = Ош
  |Эрзянь лем              = Валга ош
- |оригинальное название   = ({{lang-et|Valga}}
+ |оригинальное название   = {{lang-et|Valga}}
  |изображение             =  Valga_collage.jpg
  |подчинение              = 
  |мастор                  = Эстэнь Мастор
- |герб                    =Valga coat of arms.svg
+ |герб                    = Valga coat of arms.svg
  |коцт                    = Flag of et-Valga.svg
  |описание герба          = 
  |описание флага          = 
@@ -30,19 +29,19 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = мэр
- |глава                   =Калев Хярк
+ |глава                   = Калев Хярк
  |дата основания          = 
- |первое упоминание       =1286 ие
+ |первое упоминание       = 1286 ие
  |прежние имена           = 
  |статус с                =  
- |покшолмазо              =   16,54
+ |покшолмазо              = 16,54
  |вид высоты              = 
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =12539<ref name="stat.ee">[http://www.stat.ee/ppe-50969 Eesti statistika 2012  Эстониянь Статистикась 2012]{{ref-et}}</ref>
+  |эрицятне               = 12539<ref name="stat.ee">[http://www.stat.ee/ppe-50969 Eesti statistika 2012  Эстониянь Статистикась 2012]{{ref-et}}</ref>
   |год переписи           = 2012
-  |плотность              =   842,2
+  |плотность              =  842,2
   |агломерация            = 
   |национальный состав    = 
   |конфессиональный состав= 
