Removing "Valga_collage.jpg", it has been deleted from Commons by [[commons:User:Alan|Alan]] because: Missing [[:c:COM:EI|essential information]] such as [[:c:COM:L|license]], [[:c:COM:PERMISSION|permission]] or source. Media without a source as of 20 Nov

--- a/Валга_ош.mw
+++ b/Валга_ош.mw
@@ -2,7 +2,7 @@
  |статус                  = Ош
  |Эрзянь лем              = Валга ош
  |оригинальное название   = {{lang-et|Valga}}
- |изображение             =  Valga_collage.jpg
+ |изображение             =
  |подчинение              = 
  |мастор                  = Эстэнь Мастор
  |герб                    = Valga coat of arms.svg
