*Empty MediaWiki Message*

--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -6,7 +6,7 @@ OfNm2=Karjalan tazavalla|
 FSCoA=[[Артовкс:Coat of Arms of Republic of Karelia.svg|125px|Карелэнь Республиканть герб]]|
 FSMapName=RussiaKarelia|
 FSCtrWhat=Прявтош|
-FSCtrNm=[[Петраньзаводонь ош]]|
+FSCtrNm=[[Петроской ош]]|
 AreaRnk=21-це|
 TotArea=172 400|
 WaterPrcnt=14,7|
