--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -23,7 +23,7 @@ HeadNm= Худилайнен Александр|
 MSKS=0|
 }}
 
-'''Карелэнь Республикась''' (Карелэнь Мастор, {{lang-ru|Республика Карелия}}, {{lang-krl|Karjalan tazavalla}}) — ашти [[Россия Мастор|Россия Масторсо]].
+'''Карелэнь Республикась''' (Карелэнь Мастор, {{lang-olo|Karjalan tazavaldu}}, {{lang-krl|Karjalan tašavalta}}, {{lang-fi|Karjalan tasavalta}}<ref>[http://gov.karelia.ru/gov/Different/karelia3_f.html Karjalan tasavalta (tiivistetty info)] {{ref-fi}}</ref>, {{lang-vep|Karjalan Tazovaldkund}} — [[Россия Мастор]]онь субъект.
 
 {{Суоми-угрань масторт}}
 {{Пелевеёнксонь-Чивалгомань федерациянь кужось}}
