*Empty MediaWiki Message*

--- a/Карелэнь_Республикась.mw
+++ b/Карелэнь_Республикась.mw
@@ -25,6 +25,8 @@ MSKS=0|
 
 '''Карелэнь Республикась''' (Карелэнь Мастор, {{lang-olo|Karjalan tazavaldu}}, {{lang-krl|Karjalan tašavalta}}, {{lang-fi|Karjalan tasavalta}}<ref>[http://gov.karelia.ru/gov/Different/karelia3_f.html Karjalan tasavalta (tiivistetty info)] {{ref-fi}}</ref>, {{lang-vep|Karjalan Tazovaldkund}} — [[Россия Мастор]]онь субъект.
 
+[[Петроской ош]] - Карелэнь Руспубликань прявтошось.
+
 {{Суоми-угрань масторт}}
 {{Пелевеёнксонь-Чивалгомань федерациянь кужось}}
 <br clear="all">
