*Empty MediaWiki Message*

--- a/Саратов_ош.mw
+++ b/Саратов_ош.mw
@@ -46,14 +46,14 @@
   |национальный состав    = 
   |конфессиональный состав= 
   |этнохороним            = 
- |часовой пояс            = 
+ |шкань каркс             = +3
  |DST                     = 
  |телефонный код          = 8452 
  |почтовый индекс         = 
  |почтовые индексы        = 410XXX
  |автомобильный код       = 
- |вид идентификатора      = 
- |цифровой идентификатор  = 63701000001
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|63701000001}}
  |категория в Commons     = 
  | сайт                     = http://www.saratovmer.ru/
  |язык сайта              = ru
