*Empty MediaWiki Message*

--- a/Саратов_ош.mw
+++ b/Саратов_ош.mw
@@ -34,13 +34,13 @@
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 
- |покшолмазо              =394
+ |покшолмазо              = 394
  |вид высоты              = 
  |высота центра НП        = 50
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 842 097
+  |год переписи           = 2015
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
