*Empty MediaWiki Message*

--- a/Олязор.mw
+++ b/Олязор.mw
@@ -1,3 +1,3 @@
-'''Óлязор''' ([[суоминь кель|суом.]] эйсте: '''''vapaherra''' — аорев, олянь азор'', [[рузонь кель|руз.]] ''барон'', [[англань кель|анг.]] ''baron'') — покш куншкапингень мастачей Чивалгома Европасо, мейле — арнемань лем.
+'''Óлязор''' ([[суоминь кель|суом.]] эйсте: '''''vapaherra''' — аорев, олянь азор'', [[рузонь кель|руз.]] ''барон'', [[англань кель|анг.]] ''baron'') — покш [[Куншкапинге|куншкапингень]] [[мастачей]] Чивалгома Европасо, мейле — арнемань лем.
 
 [[Категория:История|П]]
