*Empty MediaWiki Message*

--- a/Петроской_ош.mw
+++ b/Петроской_ош.mw
@@ -58,4 +58,8 @@
  | сайт                   = http://Петрозаводск.рф/
  |язык сайта              = ru
 }}
-'''Петроской ош''' - Карелэнь Республикань прявтошось.
+'''Петроской ош''' - [[Карелэнь Республикась|Карелэнь Республикань]] прявтошось.
+
+[[Категория:Россия Масторонть ошт]]
+[[Категория:Россия Масторонть масторпелькстнэ]]
+[[Категория:Прявтошт]]
