--- a/Лобез_ош.mw
+++ b/Лобез_ош.mw
@@ -41,8 +41,8 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 10 440
-  |год переписи           = 2014
+  |эрицятне               = 10 409<ref>Główny Urząd Statystyczny, dane za rok 2015, stan na 01.01.2015.[http://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2015-r-,7,12.html]</ref>
+  |год переписи           = 2015
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
