*Empty MediaWiki Message*

--- a/Модавтомо_Ива.mw
+++ b/Модавтомо_Ива.mw
@@ -28,5 +28,5 @@
 Инязорочизо ули лондадозь: васень инязорочизо прява Нормандия нельгевсь, песэ кирвазсь ошэрицянь тюрема (изнявомадонзо лемдевсь “Чевте Торо”). 1215 иесэ пря кепеды [[олязор]]от (баронт) сёрмадовтызь [[Ине Юртконёв]]. Кулялемезэ истямо, мезе кияк Англиянь инязоротнестэ канполатксозо “Ивакс” эзь лемде. 
 
 
-[[Category:История|П]]
-[[Category:Англиянь инязорт|П]]
+[[Category:История|М]]
+[[Category:Англиянь инязорт|М]]
