*Empty MediaWiki Message*

--- a/Плантагенетт.mw
+++ b/Плантагенетт.mw
@@ -14,4 +14,4 @@
 * [[Ричо Омбоце]] (1377—1399), нуцьказо, [[Эдва Раужо Инязорке|Раужо Инязоркень]] цёра
 
 
-[[Категория:История|П]]
+[[Категория:История|Т]]
