*Empty MediaWiki Message*

--- a/Куншкапинге.mw
+++ b/Куншкапинге.mw
@@ -2,4 +2,4 @@
 
 '''Куншкапинге''' ([[рузонь кель|руз.]] ''Средневековье'', [[англань кель|анг.]] ''Middle Ages'') — те шка V пингеде XVI пингес.
 
-[[Категория:История|П]]
+[[Категория:История|К]]
