*Empty MediaWiki Message*

--- a/Категория:Англиянь_инязорт.mw
+++ b/Категория:Англиянь_инязорт.mw
@@ -3,4 +3,4 @@
 [[Категория:Англиянь кирдицят]]
 [[Категория:Европань кирдицят|Англия]]
 [[Категория:Кирдицят мастортнева|Англия]]
-[[Категория:Британиянь веазорчи]]
+[[Категория:Британиянь вейкязорксчи]]
