*Empty MediaWiki Message*

--- a/Пильгеоска.mw
+++ b/Пильгеоска.mw
@@ -21,7 +21,7 @@
 |Портал     = 
 |Сюлмавозь_проектнэ    = 
 }}
-'''Пильгеоска''' - те командонь (вейсэнь) налксема.
+'''Пильгеоска''', ''серькоска'' — те командонь (вейсэнь) налксема.
 
 Эйсэнзе улить: аштиця, идиця, куншкасо налксиця, чавиця.
 
