*Empty MediaWiki Message*

--- a/Эрямарт.mw
+++ b/Эрямарт.mw
@@ -1,3 +1,3 @@
-'''Эрямарт''' (''"эрямо"'' + ''"[[арт]]"'', {{lang-fi|elokuva}}, {{lang-en|фильм, кино}}, {{lang-en|film, movie}}) — башка эрямарт-{{comment|колчи|искусство}}нь теевкс. 
+'''Эрямарт''' (''"эрямо"'' + ''"[[арт]]"'', {{lang-fi|elokuva}}, {{lang-ru|фильм, кино}}, {{lang-en|film, movie}}) — башка эрямарт-{{comment|колчи|искусство}}нь теевкс. 
 
 [[Category:Колчи]]
