*Empty MediaWiki Message*

--- a/Модавтомо_Ива.mw
+++ b/Модавтомо_Ива.mw
@@ -24,7 +24,7 @@
  |википурнавкс         = 
 }}
 
-'''Модавтомо Ива''' ({{lang-en|Иоанн Безземе́льный}}, {{lang-en|John Lackland}}) ([[ацамковонь 24 чи]] 1166 - [[ожоковонь 19 чи]] 1216) — те ульсь [[Англия]]нь [[инязор]]о 1199 иестэ, Аквитаниянь ушмоветиця Тюскснав-кансто, веженсь Генрикень II ды Аквитаниянь Алиеноронь цёрась. 
+'''Модавтомо Ива''' ({{lang-ru|Иоанн Безземе́льный}}, {{lang-en|John Lackland}}) ([[ацамковонь 24 чи]] 1166 - [[ожоковонь 19 чи]] 1216) — те ульсь [[Англия]]нь [[инязор]]о 1199 иестэ, Аквитаниянь ушмоветиця Тюскснав-кансто, веженсь Генрикень II ды Аквитаниянь Алиеноронь цёрась. 
 Инязорочизо ули лондадозь: васень инязорочизо прява Нормандия нельгевсь, песэ кирвазсь ошэрицянь тюрема (изнявомадонзо лемдевсь “Чевте Торо”). 1215 иесэ пря кепеды [[олязор]]от (баронт) сёрмадовтызь [[Ине Юртконёв]]. Кулялемезэ истямо, мезе кияк Англиянь инязоротнестэ канполатксозо “Ивакс” эзь лемде. 
 
 
