*Empty MediaWiki Message*

--- a/1166_ие.mw
+++ b/1166_ие.mw
@@ -4,7 +4,7 @@
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-* [[Ацамковонь_24_чи]] [[Модавтомо Ива]]  — Англиянь инязоро.
+* [[Ацамковонь 24 чи]] [[Модавтомо Ива]]  — Англиянь инязоро.
 == Кулость ==
 
 
