*Empty MediaWiki Message*

--- a/Сурвеле_(Кочкурбуе).mw
+++ b/Сурвеле_(Кочкурбуе).mw
@@ -31,7 +31,7 @@
  |внутреннее деление      = 
  |вид главы               = велень прявт
  |глава                   = 
- |дата основания          =  ХIII - ХIV
+ |дата основания          =  ХIII пинге
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 
@@ -53,8 +53,8 @@
  |почтовый индекс         = 431586
  |почтовые индексы        = 
  |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = 
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
