--- a/Кочкурбуе.mw
+++ b/Кочкурбуе.mw
@@ -87,8 +87,8 @@
 * [[Ташто Пурня (Кочкурбуе)|Ташто Пурня]] — ({{lang-ru|Старая Пырма}})    
 * [[Ташто Мурза (Кочкурбуе)|Ташто Мурза]] — ({{lang-ru|Старые Турдаки}})   
 
-печказонь велеть:
-* [[Татарский Умыс (Кочкурбуе)|Татарский Умыс]]  - ({{lang-tt|Тат-умыс, Ымызы}}) 
+печкасонь велеть:
+* [[Печкасонь Умыс (Кочкурбуе)|Печкасонь Умыс]]  - ({{lang-tt|Тат-умыс, Ымызы}}) 
 
 човорязь велеть:
 * [[Красномайский (Кочкурбуе)|Красномайский]] - (эрить рузт-эрзят) 
