*Empty MediaWiki Message*

--- a/Печкасонь_Умыс_(Кочкурбуе).mw
+++ b/Печкасонь_Умыс_(Кочкурбуе).mw
@@ -54,7 +54,7 @@
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = ОКАТО
- |цифровой идентификатор  = {{ОКАТО|}}
+ |цифровой идентификатор  = {{ОКАТО|89231820003}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
