--- a/Покш_кирмалав.mw
+++ b/Покш_кирмалав.mw
@@ -1,4 +1,4 @@
 [[Image:W gobou4031.jpg|thumb|250px|right|border|Кирмалав]]
-'''Кирмалав''' (лат. ''Polygonum aviculare'') — покш ламоиень астрань буестэ [[касыкс]]. Касы ломань удалксонь вакссо: кинь вакссо, пиресэ, паксясо. 
+'''Кирмалав''' ({{lang-la|Polygonum aviculare}}) — покш ламоиень астрань буестэ [[касыкс]]. Касы ломань удалксонь вакссо: кинь вакссо, пиресэ, паксясо. 
 
 [[Категория:Тикшеть|К]]
