Update: Премьер-министр Юха Сипиля

--- a/Суоми_Мастор.mw
+++ b/Суоми_Мастор.mw
@@ -16,7 +16,7 @@
  |Сехте покш ош=[[Хельсинки ош|Хельсинки ош]]&nbsp;
  |Правлениянь хвормась=[[Президентской республикась]]&nbsp;
  |Прявттнэнь таркаст=[[Президент Финляндии|Президент]]<br />[[Премьер-министр Финляндии|Премьер-министр]]
- |Прявттнэ=[[Саули Нийнистё]]<br />[[Александр Стубб]] 
+ |Прявттнэ=[[Саули Нийнистё]]<br />[[Юха Сипиля]] 
  |Таркась модаванть=63
  |Покшолмазо=338 145
  |Веденть процентэсь=9,96
