--- a/Суоми_Мастор.mw
+++ b/Суоми_Мастор.mw
@@ -1,7 +1,4 @@
-{|align="right"
-|-
-|
-{{Мастор
+{{Мастор2
  |Эрзянь лем=Суоми Республикась
  |Оригинальное название=Suomen Tasavalta<br />Republiken Finland
  |Родительный падеж=Суоминь
@@ -30,9 +27,7 @@
  |Часовойть каркст=+2&nbsp;
  |Примечания=<references/>
 }}
-|-
-| 
-|}
+
 
 '''Суоми Республикась''' (Суоми Мастор, {{lang-fi|Suomi, Suomen Tasavalta}}, {{lang-sv|Republiken Finland}}) — Мастор Европань [[Пелеве ёнкс|пелеве ёнкссо]]. Сови Пелевеёнксонь Вейсендявксоньте (саезь [[1956]] иесте), Европань веёсендявксоньте (саезь [[1995]] иесте) ды Шенгенень соглашенияньте (саезь [[1996]] иесте).
 
