*Empty MediaWiki Message*

--- a/Суоми_Мастор.mw
+++ b/Суоми_Мастор.mw
@@ -19,6 +19,7 @@
  |Веденть процентэсь=9,96
  |Таркась эрицятнева=106
  |Эрицятне=5 219 732
+ |Раськень сёрмацтомась иесь = 2003
  |Ловнома иесь=2003
  |Ломантнень плотностесь=15,4
  |Доменть=[[.fi]], [[.ax]] ([[Аландонь усият]]нень туртов)
