*Empty MediaWiki Message*

--- a/Плантагенетт.mw
+++ b/Плантагенетт.mw
@@ -1,4 +1,4 @@
-'''Тюскснав-кан''', ''Плантагенетт'' ({{lang-ru|Плантагенеты}}, {{lang-fr|Plantagenêt}}, {{lang-en|Plantagenets}}) — те [[Франция Мастор|кранцузонь]] юронь инязоронь [[кан]]сь (династиясь), вейке Гатине-Анжу кудонь тарадтнестэ. Масторст ули васня [[Франция Мастор|Кранциясо]], ансяк цётавкссо келейгадсть, ды Тюскснавт арасть Англиянь инязорокс. 
+'''Плантагенетт''' ({{lang-ru|Плантагенеты}}, {{lang-fr|Plantagenêt}}, {{lang-en|Plantagenets}}) — те [[Франция Мастор|кранцузонь]] юронь инязоронь [[кан]]сь (династиясь), вейке Гатине-Анжу кудонь тарадтнестэ. Масторст ули васня [[Франция Мастор|Кранциясо]], ансяк цётавкссо келейгадсть, ды Тюскснавт арасть Англиянь инязорокс. 
 
 Тюскснав — те ютавтома латинань валзюлмосто ({{lang-la|planta genista}}), эрзякс ''тюскснав'' ({{lang-ru|дрок}}), секс мекс теке цеця ульсь Тюскснав Ехронь тешкс (эмблема). 
 
