*Empty MediaWiki Message*

--- a/Семивражки_(Торбейбуе).mw
+++ b/Семивражки_(Торбейбуе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Семивражки''' ({{Lang-ru|с. Семивражки}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+'''Семивражки''' ({{Lang-ru|с. Семивражки}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 == Сёрм.: ==
