*Empty MediaWiki Message*

--- a/Воронеж_ош.mw
+++ b/Воронеж_ош.mw
@@ -1,4 +1,3 @@
-<br/>
 {{ЭТ
  |статус                  = Ош
  |Эрзянь лем              = Воронеж ош
@@ -35,9 +34,9 @@
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 1779 ие
- |покшолмазо              = 596,51
+ |покшолмазо              = 596,51<ref name="GKS">[http://www.gks.ru/dbscripts/munst/munst20/DBInet.cgi База данных показателей муниципальных образований.]</ref>
  |вид высоты              = 
- |высота центра НП        = 
+ |высота центра НП        = 154
  |климат                  = 
  |официальный язык        = 
   |эрицятне               = 1 014 610
@@ -57,8 +56,11 @@
  |цифровой идентификатор  = 
  |категория в Commons     = Voronezh
  |сайт                    = http://www.voronezh-city.ru
- |язык сайта              = 
+ |язык сайта               = ru
+ |язык сайта 2             = en
+ |add1n                    = Казнеть
+ |add1                     = {{Ленинэнь орден|тип=ош}} {{Орден Отечественной войны 1 степени|тип=город}}
 }}
-'''Воронеж ош''' ({{Lang-ru|Воронеж}}) — те [[Россия Мастор]]онть ошось, [[Воронежень ёнкс]]онь прявтошось.
+'''Воронеж ош''' ({{Lang-ru|Воронеж}}) — те [[Россия Мастор]]онть ошось, [[Воронежень ёнкс]]онь прявтошось. Ашти [[Воронеж лей|Воронеж леень]] чирьтнесэ ды [[Дон лей|Дононь леень]] керш чирьсэ. 
 
 [[Категория:Россия Масторонть ошт|В]]
