--- a/ЛопаПарцун:Ленинэнь_орден.mw
+++ b/ЛопаПарцун:Ленинэнь_орден.mw
@@ -1,10 +1,10 @@
 <includeonly>{{#switch: {{{тип|}}}
- | ушманпелькс = [[Файл:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Воинские части, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
- | ош = [[Файл:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Города, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
- | регион = [[Файл:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Регионы, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
- | организация = [[Файл:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Организации, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
- | СМИ | сми = [[Файл:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден]]{{Категория только в статьях|СМИ, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
- | корабль = [[Файл:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Корабли, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
+ | ушманпелькс = [[File:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Воинские части, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
+ | ош = [[File:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Города, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
+ | регион = [[File:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Регионы, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
+ | организация = [[File:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Организации, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
+ | СМИ | сми = [[File:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден]]{{Категория только в статьях|СМИ, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
+ | корабль = [[File:Leninorder.jpg|40px|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Корабли, награждённые орденом Ленина|{{PAGENAME}}|nocat={{{nocat|}}}}}
  | [[Артовкс:Order of Lenin ribbon bar.png|40px|border|link=Ленинэнь орден|Ленинэнь орден {{#if: {{{1|}}}| — {{{1}}}}}]]{{Категория только в статьях|Ленинэнь орденэнь Кавалерт|{{PAGENAME}}|nocat={{{nocat|}}}}}
 }}</includeonly><noinclude>
 {{doc}}
