*Empty MediaWiki Message*

--- a/Палдиски_ош.mw
+++ b/Палдиски_ош.mw
@@ -58,7 +58,7 @@
  |сайт                    =  http://www.paldiski.ee/
  |язык сайта              = 
 }}
-'''Палдиски''' ({{lang-et|Paldiski}}, {{k-de|Baltischport}}) - [[Эстэнь Мастор]]онь ош [[Балтиянь иневедь|Балтиянь иневедень]] чиресэ.
+'''Палдиски''' ({{lang-et|Paldiski}}, {{lang-de|Baltischport}}) - [[Эстэнь Мастор]]онь ош [[Балтиянь иневедь|Балтиянь иневедень]] чиресэ.
 
 ==Сёрм.==
 <references />
