*Empty MediaWiki Message*

--- a/Воронеж_ош.mw
+++ b/Воронеж_ош.mw
@@ -59,8 +59,8 @@
  |язык сайта               = ru
  |язык сайта 2             = en
  |add1n                    = Казнеть
- |add1                     = {{Ленинэнь орден|тип=ош}} {{Орден Отечественной войны 1 степени|тип=город}}
+ |add1                     = {{Ленинэнь орден|тип=ош}} {{Орден Отечественной войны 1 степени|тип=ош}}
 }}
-'''Воронеж ош''' ({{Lang-ru|Воронеж}}) — те [[Россия Мастор]]онть ошось, [[Воронежень ёнкс]]онь прявтошось. Ашти [[Воронеж лей|Воронеж леень]] чирьтнесэ ды [[Дон лей|Дононь леень]] керш чирьсэ. 
+'''Воронеж ош''' ({{Lang-ru|Воронеж}}) — те [[Россия Мастор]]онть ошось, [[Воронежень ёнкс]]онь прявтошось. Ашти [[Воронеж лей|Воронеж леень]] чиретнесэ ды [[Дон лей|Дононь леень]] керш чиресэ. 
 
 [[Категория:Россия Масторонть ошт|В]]
