*Empty MediaWiki Message*

--- a/2015_ие.mw
+++ b/2015_ие.mw
@@ -1,13 +1,14 @@
 {{Ие-нав|2015}}
-'''2015 ие'''.
+'''2015 (кавто тёжат кеветееце) ие'''.
 
 == Мезе ульнесь те иестенть ==
 * [[Якшамковонь 1 чи]]стэ [[Литва Мастор|Литва]] совась [[Евро|евронь]] рамома-микшнема [[ярмакт|ярмак]]оньте.
-
+<!--
+* [[Якшамковонь 20 чи]]стэ топодcть 290 иеть чачома чисте Иоганн Петер Фальконь, шведэнь этнографонь, Петербургонь Академиянь Наукань академик, сон ульнесь экспедициясо [[XVIII пинге]]стэ Россиянь Империссо, ды пурнась [[эрзят]]нень мода таркава [[тикше]]нь лемть (1725-1774).
+*  Топодcть 100 иеть чачома чисте [[Батаевень, Павел Петрович|Батаевень Павел Петровичэнь]] — [[Эрзя|эрзянь]] валморонь ладсиенть, куляньсёрмадеенть, Ине Отечествань туремань улицянть (1915-1942). -->
 
 == Чачсть ==
-* [[Якшамковонь 20 чи]]стэ топодcть 290 иеть чачома чисте Иоганн Петер Фальконь, шведэнь этнографонь, Петербургонь Академиянь Наукань академик, сон ульнесь экспедициясо [[XVIII пинге]]стэ Россиянь Империссо, ды пурнась [[эрзят]]нень мода таркава [[тикше]]нь лемть (1725-1774).
-*  Топодcть [[100 ие]]ть чачома чисте [[Батаевень, Павел Петрович|Батаевень Павел Петровичэнь]] — [[Эрзя|эрзянь]] валморонь ладсиенть, куляньсёрмадеенть, Ине Отечествань туремань улицянть (1915-1942). 
+
 
 == Кулость ==
 
