*Empty MediaWiki Message*

--- a/АВШ_прявттнень_лововкс.mw
+++ b/АВШ_прявттнень_лововкс.mw
@@ -20,7 +20,7 @@
 |-
 |'''1'''
 |[[File:Gilbert Stuart Williamstown Portrait of George Washington.jpg|100px]]
-|Вашингтононь Егорё
+|[[Вашингтон Джордж]]
 |[[чадыковонь 30 чи]] [[1789]]
 |[[эйзюрковонь 4 чи]] [[1797]]
 | Пелевтеме
