*Empty MediaWiki Message*

--- a/АВШ_прявттнень_лововкс.mw
+++ b/АВШ_прявттнень_лововкс.mw
@@ -413,7 +413,7 @@
 |- bgcolor = #CCEFFF
 |'''44'''
 |[[File:Official portrait of Barack Obama.jpg|100px]]
-|Обамань Барак
+|[[Обамань Барак]]
 |[[якшамковонь 20 чи]] [[2009]]
 |'''Тейниця<br />Прявт'''<br /><small>тев-ютко прядовы<br />[[якшамковонь 20 чи]]сэ [[2017]] </small>
 |Раськязорчинь пеле
