PNG→SVG ([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.2]])

--- a/Тверень_ёнкс.mw
+++ b/Тверень_ёнкс.mw
@@ -2,7 +2,7 @@
 Лем=Тверень ёнкс|
 РЛ=Тверская область|
 Коцт=[[Артовкс:Flag of Tver Oblast.svg|150px|Тверень ёнксонть коцт]]|
-FSCoA=[[Артовкс:Coat of Arms of Tver oblast.png|120px|Тверень ёнксонть герб]]|
+FSCoA=[[Артовкс:Coat of Arms of Tver oblast.svg|120px|Тверень ёнксонть герб]]|
 FlagLnk=Тверень ёнксонть коцтось|
 CoALnk=Тверень ёнксонть гербесь|
 FSMapName=RussiaTver|
