*Empty MediaWiki Message*

--- a/Мокша_(смустьтне).mw
+++ b/Мокша_(смустьтне).mw
@@ -4,7 +4,7 @@
 * [[Мокша (журнал-ковставкс)|Мокша (ковставкс)]] — литературань-художественной ды вейсэнь-политикань ковставкс [[мокшонь кель]]сэ.
 
 ;Топоним
-* [[Мокша (Мордовиясо)]] — посёлка [[Торбейбуе]]сэ [[Мордовия]]со.
+* [[Мокша (Торбейбуе)|Мокша]] — посёлка [[Торбейбуе]]сэ [[Мордовия]]со.
 * [[Мокша (Самара ёнкс)]] — веле [[Покш Глушицань буе]]сэ [[Самара ёнкс]]о.
 * [[Мокша (Татаронь Мастор)]] — веле Атнинэнь буесэ  [[Татаронь Республикась|Татаронь Масторсо]].
 * [[Мокша лей|Мокша]] — лей [[Россия]]со, [[Йока]] леенть витьсянглей.
