*Empty MediaWiki Message*

--- a/Торбеева_(Торбейбуе).mw
+++ b/Торбеева_(Торбейбуе).mw
@@ -1,6 +1,6 @@
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              = Торбеево
+ |Эрзянь лем              = Торбеева
  |оригинальное название   = {{Lang-ru|пгт. Торбеево}}
  |изображение             = 
  |подчинение              = 
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Торбеево''' ({{Lang-ru|пгт. Торбеево}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+'''Торбеева''' ({{Lang-ru|пгт. Торбеево}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 == Сёрм.: ==
