*Empty MediaWiki Message*

--- a/Вержеля_(Торбейбуе).mw
+++ b/Вержеля_(Торбейбуе).mw
@@ -58,7 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Вержеля''' ({{Lang-ru|с. Варжеляй}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+'''Вержеля''' ({{Lang-ru|с. Варжеляй}}) — мокшонь<ref>[http://mnogolik-mordovia.mrsu.ru/u_20.htm  Многоликая Мордовия:Список населенных пунктов Торбеевского района]{{Ref-ru}}</ref> веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 == Сёрм.: ==
@@ -66,3 +66,4 @@
 
 [[Category:Мордовиянь велеть]]
 [[Category:Торбейбуень велеть]]
+[[Category:Мокшонь велеть]]
