*Empty MediaWiki Message*

--- a/Вязовка_(Торбейбуе).mw
+++ b/Вязовка_(Торбейбуе).mw
@@ -58,7 +58,8 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Вязовка''' ({{Lang-ru|д. Вязовка}}) — мокшонь<ref>[http://mnogolik-mordovia.mrsu.ru/u_20.htm  Многоликая Мордовия:Список населенных пунктов Торбеевского района]{{Ref-ru}}</ref> веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+{{Лия смустьтне|Вязовка (смустьтне)}}
+'''Вязовка''' ({{Lang-ru|д. Вязовка}}) — мокшонь<ref>[http://mnogolik-mordovia.mrsu.ru/u_20.htm  Многоликая Мордовия: Список населенных пунктов Торбеевского района]{{Ref-ru}}</ref> веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 == Сёрм.: ==
