/* Шенталань буень велеть */

--- a/Шенталань_буе_Самарань_ёнксcо.mw
+++ b/Шенталань_буе_Самарань_ёнксcо.mw
@@ -57,7 +57,7 @@
 * ({{lang-ru|Андреевка}} - {{lang-myv|?}}) 
 * ({{lang-ru|Багана}} - {{lang-myv|Баганя веле}}) - [[Баганя веле (Шенталань буе)|Баганя веле]]
 * ({{lang-ru|Васильевка}} - {{lang-myv|?}}) 
-* ({{lang-ru|Вязовка}} - {{lang-myv|?}}) 
+* ({{lang-ru|Вязовка}} - {{lang-myv|?}}) - [[Вязовка  (Шенталань буе)|Вязовка]] 
 * ({{lang-ru|Верхняя Хмелевка}} - {{lang-myv|?}}) 
 * ({{lang-ru|Кузминовка}} - {{lang-myv|?}})
 * ({{lang-ru|Нижняя Хмелевка}} - {{lang-myv|?}}) 
