/* Неень шкань фольклоронь пурнамот */

--- a/Эрзянь_фольклор.mw
+++ b/Эрзянь_фольклор.mw
@@ -44,7 +44,7 @@
 
 1999 иестэ Пензань областев ульнесть кавто фольклорной экспедицият. Некеть жо экспедициятне ульнесть Чувашиясо. Ярмактнень явокшнынзе Кастрен лемсэ финно-угорской вейсэндявксось. Истямо экспедициянь участникекс ульнесть Хельсинки ошонь университетэнь финно-угрань келень кафедрань сотрудницась Мерья Сало, Пензань областень ученоесь Николай Мальков, МНИИЯЛИЭ-нь старшей научной сотрудникесь Василий Беляков, филологической наукань кандидатнэ Нина Агафонова ды Валентина Маркина. 
 
-Экспедициянть ульнесь мелезэ пурнамс фольклорной ды келень материал финской ученоенть Хейкки Паасоненэнь киява, конась ульнесь неть таркатнесэ 110 иеде икеле. Ванномс, кодат полавкст теевсть келенть ды фольклоронть марто неть иетнень перть. Экспедициясь роботась Сярда- Белинской райононь Вышелейсэ, Мордовской Ишимсэ, Шемышейской райононь Ташто Яксаркасо, Од Яксаркасо, Захаркинасо. Сосновоборской райононь Тешнярь, Вязовка, Ега, Кардафлей велетнесэ. Теде башка ульнесть Мордовиянь Рузаевкань райононь Левжасо, Сузгарьсэ, Ковылкинань райононь Троицкойсэ, Инсаронь райононь Кочетовкасо, Чувашиянь Напольное велетнесэ. 
+Экспедициянть ульнесь мелезэ пурнамс фольклорной ды келень материал финской ученоенть Хейкки Паасоненэнь киява, конась ульнесь неть таркатнесэ 110 иеде икеле. Ванномс, кодат полавкст теевсть келенть ды фольклоронть марто неть иетнень перть. Экспедициясь роботась Сярда- Белинской райононь Вышелейсэ, Мордовской Ишимсэ, Шемышейской райононь Ташто Яксаркасо, Од Яксаркасо, Захаркинасо. Сосновоборской райононь Тешнярь, [[Вязовка (смустьтне)|Вязовка]], Ега, Кардафлей велетнесэ. Теде башка ульнесть Мордовиянь Рузаевкань райононь Левжасо, Сузгарьсэ, Ковылкинань райононь Троицкойсэ, Инсаронь райононь Кочетовкасо, Чувашиянь Напольное велетнесэ. 
 
 Экспедициянь перть диктофонс сермадозь ведьгемень часос материал. Теезь ламо фотографият. 
 Материалось, кона сермадозель диктофонс тонавтнемадо мейле, невтьсы, кода 110 иес полавтовсть эрзянь морось, евксось, жанрань лия видтнэ. Евтазь велетнесэ пурназь материалось невти эрзянь моронть неень тевензэ. Истя Пензань областень Сосновоборской райононь Тешнярь велесэ удалась сермадомс ламо содавикс хорт, группат. Ульнесть сермадозь весе жанратне. Белинской райононь Карсаевка велесэ седе парсте ванстовсть устной народной творчествань произведениятне. Тесэ вастовсть истят ломанть, кинь ульнесь мелезэ лездамс ванстомс эрзянь моротнень. Теке жо шкастонть Сярда велесэ эрицятне а пек покш мельсэ лездасть экспедициянтень. Экспедициясь невтизе, эрзянь фольклорось жив. Кезэрень моротне эште эрить ды сынст морсить. Велень эрьва кодамо праздниктне моровтомо а ютнить. 
@@ -60,7 +60,7 @@
 
 Эрзянь покш велетне таргавсть Сура леенть береконзо кувалма. Неть таркатнесэ икеле ульнесть вирть. 1859 иень переписенть коряс тесэ эрясть 150 тежат эрзят. Весе эрзятнестэ те 12,5%. Сехте ламо эйстэст ульнесть Пензенской губерниянь Городищенской уездсэ. 1970 иень переписень даннойтнень коряс Пензань областьсэ эрясть 109 тыщат эрзят. 
 
-Материалтнэ, конат пурназь евтазь экспедициятнесэ меельце иетнестэ, невтить - эрзянь фольклорось ютась а шожда ки. Сон эри ды эште карми эрямо кувать. 
+Материалтнэ, конат пурназь евтазь экспедициятнесэ меельце иетнестэ, невтить - эрзянь фольклорось ютась а шожда ки. Сон эри ды эште карми эрямо кувать.
 
 == Сёрм: ==
 * В.Беляков 
