*Empty MediaWiki Message*

--- a/Вязовка_(смустьтне).mw
+++ b/Вязовка_(смустьтне).mw
@@ -1,5 +1,7 @@
 '''Вязовка''':
 * [[Вязовка (Торбейбуе)|Вязовка]] — веле [[Торбейбуе]]сэ, [[Мордовия]]со. 
 * [[Вязовка  (Шенталань буе)|Вязовка]] — веле [[Шенталань буе Самарань ёнксcо|Шенталань буе]]сэ, [[Самара ёнкс]]со.
+* [[Вязовка  (Кузонь буе)|Вязовка]] — веле [[Кузонь буе Самарань ёнксcо|Кузонь буе]]сэ, [[Самара ёнкс]]со. 
+* [[Вязовка  (Похвистневань буе)|Вязовка]] — веле [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]сэ, [[Самара ёнкс]]со. 
 
 [[Category:Авейкетькс]]
