*Empty MediaWiki Message*

--- a/Шмидовка_(Торбейбуе).mw
+++ b/Шмидовка_(Торбейбуе).mw
@@ -43,7 +43,7 @@
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
-  |национальный состав    = 
+  |национальный состав    = [[мокшот]]
   |конфессиональный состав= 
   |этнохороним            = 
  |часовой пояс            = +3
@@ -53,8 +53,8 @@
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = 
- |цифровой идентификатор  = 
- |категория в Commons     = 
+ |цифровой идентификатор  = ОКАТО
+ |категория в Commons     = {{ОКАТО|}}
  |сайт                    = 
  |язык сайта              = 
 }}
