*Empty MediaWiki Message*

--- a/Шмидовка_(Торбейбуе).mw
+++ b/Шмидовка_(Торбейбуе).mw
@@ -52,9 +52,9 @@
  |почтовый индекс         = 431041
  |почтовые индексы        = 
  |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = ОКАТО
- |категория в Commons     = {{ОКАТО|}}
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{ОКАТО|}}
+ |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
 }}
