*Empty MediaWiki Message*

--- a/Гальцовка_(Торбейбуе).mw
+++ b/Гальцовка_(Торбейбуе).mw
@@ -58,11 +58,15 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Гальцовка''' ({{Lang-ru|д. Гальчевка}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+'''Гальцовка''' ({{Lang-ru|д. Гальчевка}}) — мокшонь<ref>[http://mnogolik-mordovia.mrsu.ru/u_20.htm  Многоликая Мордовия: Список населенных пунктов Торбеевского района]{{Ref-ru}}</ref>  веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+
+Ашти [[Парца лей|Парца ле]] сянглей лангсо. Кода лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Большая Кажлотка (Гальцовка) - 51 кудот марто  Спасонь уездсэ. 
 == Веленть лемденть  ==
+Лемесь-антророним.  «Десятнях Пензенского края» (1680) ёвтави: ({{Lang-ru|«Степан Никитин сын Гольцов служил великому государю лет 40 и больше полковую службу, и в прошлом во 188 году отставлен он от службы ...» (РИБ, т. 17, с. 310)}})<ref>Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>. 
 == Содавикс ломанть те велестэнть ==
 == Сёрм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Торбейбуень велеть]]
+[[Category:Мокшонь велеть]]
