*Empty MediaWiki Message*

--- a/1733_ие.mw
+++ b/1733_ие.mw
@@ -1,10 +1,10 @@
 {{Ие-нав|1733}}
-'''1733 ие'''.
+'''1733 (вейке тёжа сисем сядт колонькемень колмоце) ие''' — .
 
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-
+* [[Ташкамковонь 5 чи]]стэ [[Виланд Кристоф]] — немецэнь сёрмадиця (кул. [[1813 ие]]стэ).
 == Кулость ==
 
 
