*Empty MediaWiki Message*

--- a/1733_ие.mw
+++ b/1733_ие.mw
@@ -4,7 +4,7 @@
 == Мезе ульнесь те иестенть ==
 
 == Чачсть ==
-* [[Ташкамковонь 5 чи]]стэ [[Виланд Кристоф]] — немецэнь сёрмадиця (кул. [[1813 ие]]стэ).
+* [[Таштамковонь 5 чи]]стэ [[Виланд Кристоф]] — немецэнь сёрмадиця (кул. [[1813 ие]]стэ).
 == Кулость ==
 
 
