*Empty MediaWiki Message*

--- a/Бозаев_веле_(Покш_Килейбуе).mw
+++ b/Бозаев_веле_(Покш_Килейбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Бозаев веле''' (диякс: '''Бозаёв''') ({{Lang-ru|с. Бузаево}})  — те эрзянь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> веле [[Мордовия Республикась|Мордовиянь]] [[Покш Килейбуе]]сэ.
+'''Бозаев веле''' (лиякс: '''Бозаёв''') ({{Lang-ru|с. Бузаево}})  — те эрзянь<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> веле [[Мордовия Республикась|Мордовиянь]] [[Покш Килейбуе]]сэ.
 
 Ашти [[Штырма лей|Штырма леень]] ды Бозов чудикерьксэнть вейс чудемасонть лангсо. Кода лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) Бузаево - 102 кудот марто Ордань уездсэ.
 
